--- a/Index.html
+++ b/Index.html
@@ -55,8 +55,10 @@
             <label for="password">Password:</label>
             <input type="password" id="password" name="password" required>
             <button type="submit">Login</button>
-            <a href="#" id="forgotPasswordLink">Forgot Password?</a>
-            <p>This what I created</p>
+            <section>
+                <a href="#" id="forgotPasswordLink">Forgot Password?</a>
+                <p>This what I created</p>
+            </section>
 
         </form>
     </div>
